# haskell-first-principles

./: .gitignore  readme.md
chapter10/: chapter10.cabal
chapter11/: chapter11.cabal
chapter12/: chapter12.cabal
chapter13/: chapter13.cabal  stack.yaml
chapter14/: chapter14.cabal
chapter15/: chapter15.cabal  stack.yaml
chapter15/test/: BoolConj.hs  Bull.hs  Combine.hs  Comp.hs  FourSemigroup.hs  IdentitySemigroup.hs  Main.hs  MaybeMonoidTest.hs  Mem.hs  MonoidTestUtils.hs  OrSemigroup.hs  SemigroupUtils.hs  Spec.hs  TrivialSemigroup.hs  TwoSemigroup.hs  Validation.hs
chapter16/: chapter16.cabal
chapter17/: .gitignore  README.md  package.yaml  stack.yaml
chapter18/: .gitignore  ChangeLog.md  LICENSE  README.md  package.yaml
chapter19/: .gitignore  ChangeLog.md  README.md  package.yaml
chapter2/: stack.yaml
chapter20/: .gitignore  ChangeLog.md  README.md  package.yaml
chapter21/: .gitignore  ChangeLog.md  README.md  package.yaml
chapter22/: .gitignore  ChangeLog.md  README.md  package.yaml
chapter23/: .gitignore  ChangeLog.md  README.md  package.yaml
chapter24/: .gitignore  ChangeLog.md  README.md  package.yaml
chapter25/: .gitignore  ChangeLog.md  README.md  package.yaml
chapter26/: .gitignore  ChangeLog.md  README.md  package.yaml
chapter27/: .gitignore  ChangeLog.md  README.md  package.yaml
chapter3/: chapter3.cabal
chapter4/: chapter4.cabal
chapter5/: chapter5.cabal  stack.yaml
chapter6/: chapter6.cabal
chapter7/: chapter7.cabal
chapter8/: chapter8.cabal
chapter9/: chapter9.cabal
orphan-instance/: Listy.hi  Listy.hs  (+3 more)
(+299 files in other folders)
