name:                chapter15
version:             0.1.0.0
-- synopsis:
-- description:
homepage:            https://github.com/githubuser/chapter15#readme
license:             BSD3
license-file:        LICENSE
author:              Author name here
maintainer:          example@example.com
copyright:           2017 Author name here
category:            Web
build-type:          Simple
extra-source-files:  README.md
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  exposed-modules:     Lib
  build-depends:       base >= 4.7 && < 5
  default-language:    Haskell2010

executable chapter15-exe
  hs-source-dirs:      app
  main-is:             Main.hs
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  build-depends:       base
                     , chapter15
  default-language:    Haskell2010

test-suite chapter15-test
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  main-is:             Main.hs
  build-depends:       base
                     , chapter15
                     , QuickCheck
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  default-language:    Haskell2010
  other-modules:       Bull
                     , MaybeMonoidTest
                     , MonoidTestUtils
source-repository head
  type:     git
  location: https://github.com/githubuser/chapter15
